Trying to fix offset on mobile

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -107,7 +107,7 @@
 }
 
 .masthead .information-wrapper {
-  padding: 0 30px 0 30px;
+  padding: 0 5px 0 5px;
   display: flex;
 }
 
