--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -17,7 +17,7 @@
     padding: 60px 0 50px;
   }
   .information-wrapper {
-    padding: 0 30px 0 30px;
+    padding: 0 5px 0 5px;
     display: flex;
   }
   .img-circle {
